i ma checkin dem hoes to go live.

--- a/hoe-house/html/css/hoe.css
+++ b/hoe-house/html/css/hoe.css
@@ -82,6 +82,64 @@ div.desc {
 .desc a:hover		{color: #779494; text-decoration: underline;}
 .desc a:active		{color: #779494; text-decoration: none;}
 
+/* Game Start container */
+div.game, div.game1, div.game2, div.game3 {
+	border-left: 1px dotted #fff;
+	border-bottom: 1px dotted #fff;
+	margin: 0 auto;
+	width: 190px;
+	height: 30px;
+	
+	font-family: Georgia, serif;
+	color: #ccc;
+	font-size: 18px;
+	text-align: center;
+	float: left;
+}
+.game a:focus		{color: #ccc; text-decoration: none;}
+.game a:link		{color: #ccc; text-decoration: none;}
+.game a:visited		{color: #ccc; text-decoration: none;}
+.game a:hover		{color: #ccc; text-decoration: underline;}
+.game a:active		{color: #ccc; text-decoration: none;}
+
+div.game1 {
+	background-color: #00d400;
+	border: 0;
+	color: #fff;
+}
+.game1 a:focus		{color: #fff; text-decoration: none;}
+.game1 a:link		{color: #fff; text-decoration: none;}
+.game1 a:visited	{color: #fff; text-decoration: none;}
+.game1 a:hover		{color: #fff; text-decoration: underline;}
+.game1 a:active		{color: #fff; text-decoration: none;}
+
+div.game2 {
+	border-left: 0;
+	color: #fff;
+}
+
+div.game3 {
+	-moz-border-radius: 8px;
+	-webkit-border-radius: 8px;
+	border-top-left-radius: 0px;
+	border-top-right-radius: 0px;
+	border-bottom-right-radius: 0px;
+	border-left: 0;
+	color: #fff;
+}
+
+/* Game Start illustration container */
+div.illgame1 {
+	background-image:url('/art/illgame1.png');
+	-moz-border-radius: 8px;
+	-webkit-border-radius: 8px;
+	border-radius: 8px 8px;
+	border: 2px solid #f7f7f7;
+	margin: 0 auto;
+	width: 200px;
+	height: 267px;
+	float: left;
+}
 /* Illustrations container */
 div.illbro1, div.illbro2, div.illbro3, div.illhoe1, div.illhoe2,
 div.illhoe3, div.illwork1, div.illwork2, div.illwork3, div.illleave1,
@@ -94,8 +152,8 @@ div.illshop1 {
 	margin: auto;
 	margin-top: 20px;
 	margin-bottom: 10px;
-	width: 930px;
-	height: 95px;
+	width: 932px;
+	height: 100px;
 }
 div.illbro1 {
 	background-image:url('/art/illbro1.png');
@@ -139,11 +197,11 @@ div.illleave3 {
 div.illlist1, div.illlist2, div.illlist3,
 div.illshop1 {
 	border: 0;
-	border-left: 1px solid #f7f7f7;
-	border-right: 1px solid #f7f7f7;
-	border-radius: 0;
+
+	border-bottom-left-radius: 0px;
+	border-bottom-right-radius: 0px;
 	margin: 0 auto;
-	width: 960px;
+	width: 964px;
 	height: 80px;
 }
 div.illlist1 {
@@ -159,40 +217,14 @@ div.illshop1 {
 	background-image:url('/art/illshop1.png');
 }
 
-/* GAME START container */
-div.game, div.gameid {
-	border-right: 1px dotted #374548;
-	font-family: Georgia, serif;
-	color: #374548;
-	font-size: 23px;
-	
-	width: 170px;
-	margin: 0 auto;
-	padding: 0 5px 0 5px;
-	float: left;
-}
-.game a:focus		{color: #374548; text-decoration: none;}
-.game a:link		{color: #374548; text-decoration: none;}
-.game a:visited		{color: #374548; text-decoration: none;}
-.game a:hover		{color: #374548; text-decoration: underline;}
-.game a:active		{color: #374548; text-decoration: none;}
-
-div.gameid {
-	background-color: #90EE90;
-	-moz-border-radius: 8px;
-	-webkit-border-radius: 8px;
-	border-top-right-radius: 0px;
-	border-bottom-right-radius: 0px;
-}
-
 /* div big bold fonts */
-div.chunk{
+div.chunk, div.intro, div.intro1 {
 	font-family: Georgia, serif;
 	color: #374548;
 	font-size: 23px;
 	font-weight: bold;
 	
-	margin: auto;
+	margin: 0 auto;
 	width: 960px;
 	padding: 0px;
 }
@@ -201,6 +233,27 @@ div.chunk{
 .chunk a:visited	{color: #779494; text-decoration: none;}
 .chunk a:hover		{color: #779494; text-decoration: underline;}
 .chunk a:active		{color: #779494; text-decoration: none;}
+
+/*Start page container*/
+div.intro {
+	width: 860px;
+	height: 267px;
+}
+/*Start page fonts and container*/
+div.intro1 {
+	margin: 40px 0px 20px 20px;
+	width: 600px;
+	
+	color: #555;
+	font-size: 23px;
+	float: left;
+}
+.intro1 a:focus		{color: #779494; text-decoration: none;}
+.intro1 a:link		{color: #779494; text-decoration: none;}
+.intro1 a:visited	{color: #779494; text-decoration: none;}
+.intro1 a:hover		{color: #779494; text-decoration: underline;}
+.intro1 a:active	{color: #779494; text-decoration: none;}
+
 /* CRUMBS container */
 div.chunk1{
 	margin: 0px;
@@ -215,37 +268,35 @@ div.chunk2{
 }
 /* Menu headers. chunk3: Basic Menu, chunk3a: List */
 div.chunk3, div.chunk3a{
-	background-color: #e3e3e3;
 	-moz-border-radius: 8px;
 	-webkit-border-radius: 8px;
 	border-bottom-left-radius: 0px;
 	border-bottom-right-radius: 0px;
-	border:1px solid #ccc;
-	margin: auto;
-	margin-top: 20px;
+	border:0px solid #ccc;
+	margin: 0 auto;
 	width: 624px;
 	padding: 0px;
+	padding-top: 10px;
 }
 div.chunk3it, div.chunk3ait{
 	font-family: Georgia, serif;
-	color: #374548;
-	font-size: 23px;
+	color: #555;
+	font-size: 33px;
 	font-weight: bold;
 	text-align: center;
 
-	width: 604px;
 	margin: 10px;
 	float:left;
 }
 div.chunk3line {	
-	border-bottom:2px dotted #fff;
+	border-bottom:1px dotted #ccc;
 	
-	width: 550px;
-	margin: auto;
+	width: 560px;
+	margin: 0 auto;
 }
-div.chunk3a, div.chunk3ait {
+/*div.chunk3a, div.chunk3ait {
 	width: 960px;
-}
+}*/
 
 /* Icon navigation container*/
 div.chunk4{
