--- a/hoe-house/html/css/hoe.css
+++ b/hoe-house/html/css/hoe.css
@@ -65,6 +65,15 @@ div.header{
 	height: 180px;
 	margin: auto;
 	margin-top: 30px;
+	position:relative;
+}
+#tv_switch{
+	display:block;
+	position:absolute;
+	bottom:0px;
+	right:0px;
+	background-color:#ddf;
+	padding:2px;
 }
 /* div small fonts */
 div.desc {
