--- a/hoe-house/html/css/hoe.css
+++ b/hoe-house/html/css/hoe.css
@@ -17,6 +17,8 @@ http://code.google.com/p/aelua/
 http://code.google.com/appengine/
 http://www.wetgenes.com/
 http://whorehouse.naken.cc
+
+^o^ July 2010 kriss/shi daniels copywrong,left,right&center.
 */
 
 * {
@@ -34,6 +36,25 @@ b {font-weight: bold;}
 i {font-family: Lucida Sans Unicode; font-weight: bold; letter-spacing: -0.1em; line-height: 30px;}
 a img, :link img, :visited img {border: 0;}
 form, button{border:0; margin:0; padding:0;}
+
+/* thanks http://ryanfait.com/sticky-footer/ */
+html, body {
+	height: 100%;
+}
+.wrapper {
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin: 0 auto -50px;
+}
+.footer, .push {
+	height: 50px;
+	clear: both;
+}
+.footer {
+	background-color: none;
+}
+
 	
 body{
 	background-color: #f7f7f7;
@@ -46,10 +67,16 @@ a:visited	{color: #444; text-decoration: none;}
 a:hover		{color: #444; text-decoration: underline;}
 a:active	{color: #444; text-decoration: none;}
 
-/* Main container */
+/* Main Container */
+div.maincont{
+	width: 960px;
+	margin: 0 auto;
+	padding-bottom: 40px;
+}
+/* Container for contents */
 div.cont{
 	width: 960px;
-	margin: auto;
+	margin: 0 auto;
 }
 /* Main container horizontal line */
 div.line{	
@@ -67,6 +94,7 @@ div.header{
 	margin-top: 30px;
 	position:relative;
 }
+
 #tv_switch{
 	display:block;
 	position:absolute;
@@ -75,21 +103,33 @@ div.header{
 	background-color:#ddf;
 	padding:2px;
 }
-/* div small fonts */
-div.desc {
+
+/* Footer container */
+div.desc, div.desc1 {
 	font-family: Georgia, serif;
 	color: #374548;
-	font-size: 16px;
+	font-size: 12px;
 	
-	margin: auto;
-	width: 960px;
+	width: 480px;
+	margin: 0 auto;
 	padding: 0px;
+	padding-top: 10px;
+	float: left;
 }
 .desc a:focus		{color: #779494; text-decoration: none;}
 .desc a:link		{color: #779494; text-decoration: none;}
 .desc a:visited		{color: #779494; text-decoration: none;}
 .desc a:hover		{color: #779494; text-decoration: underline;}
 .desc a:active		{color: #779494; text-decoration: none;}
+div.desc1 {
+	text-align: right;
+	float: right;
+}
+.desc1 a:focus		{color: #779494; text-decoration: none;}
+.desc1 a:link		{color: #779494; text-decoration: none;}
+.desc1 a:visited		{color: #779494; text-decoration: none;}
+.desc1 a:hover		{color: #779494; text-decoration: underline;}
+.desc1 a:active		{color: #779494; text-decoration: none;}
 
 /* Game Start container */
 div.game, div.game1, div.game2, div.game3 {
@@ -105,26 +145,27 @@ div.game, div.game1, div.game2, div.game3 {
 	text-align: center;
 	float: left;
 }
-.game a:focus		{color: #ccc; text-decoration: none;}
-.game a:link		{color: #ccc; text-decoration: none;}
-.game a:visited		{color: #ccc; text-decoration: none;}
-.game a:hover		{color: #ccc; text-decoration: underline;}
-.game a:active		{color: #ccc; text-decoration: none;}
+.game a:focus		{color: #ccc; font-weight: bold; text-decoration: none;}
+.game a:link		{color: #ccc; font-weight: bold; text-decoration: none;}
+.game a:visited		{color: #ccc; font-weight: bold; text-decoration: none;}
+.game a:hover		{color: #ccc; font-weight: bold; text-decoration: underline;}
+.game a:active		{color: #ccc; font-weight: bold; text-decoration: none;}
 
 div.game1 {
 	background-color: #00d400;
-	border: 0;
+	border-left: 0;
 	color: #fff;
 }
-.game1 a:focus		{color: #fff; text-decoration: none;}
-.game1 a:link		{color: #fff; text-decoration: none;}
-.game1 a:visited	{color: #fff; text-decoration: none;}
-.game1 a:hover		{color: #fff; text-decoration: underline;}
-.game1 a:active		{color: #fff; text-decoration: none;}
+.game1 a:focus		{color: #fff; font-weight: bold; text-decoration: none;}
+.game1 a:link		{color: #fff; font-weight: bold; text-decoration: none;}
+.game1 a:visited	{color: #fff; font-weight: bold; text-decoration: none;}
+.game1 a:hover		{color: #fff; font-weight: bold; text-decoration: underline;}
+.game1 a:active		{color: #fff; font-weight: bold; text-decoration: none;}
+.game1:hover		{background-color: #23EA23;}
+.game1:active		{background-color: #00d400;}
 
 div.game2 {
 	border-left: 0;
-	color: #fff;
 }
 
 div.game3 {
@@ -134,7 +175,6 @@ div.game3 {
 	border-top-right-radius: 0px;
 	border-bottom-right-radius: 0px;
 	border-left: 0;
-	color: #fff;
 }
 
 /* Game Start illustration container */
@@ -735,10 +775,8 @@ div.formline1 {
 
 /* Percentage container */
 div.chunk9{
-	margin: auto;
-	margin-bottom: 20px;
+	margin: 0 auto;
 	width: 500px;
-	clear: both;
 }
 /* Fonts for action Forms. formt: work, formta: shop, */
 div.formt, div.formta{
