--- a/hoe-house/html/css/hoe.css
+++ b/hoe-house/html/css/hoe.css
@@ -103,6 +103,9 @@ div.header{
 	background-color:#ddf;
 	padding:2px;
 }
+#tv_switch:hover{
+	background-color:#FEC7C7;
+}
 
 /* Footer container */
 div.desc, div.desc1 {
