--- a/hoe-house/html/css/hoe.css
+++ b/hoe-house/html/css/hoe.css
@@ -254,8 +254,8 @@ div.illgame1 {
 div.illbro1, div.illbro2, div.illbro3, div.illhoe1, div.illhoe2,
 div.illhoe3, div.illwork1, div.illwork2, div.illwork3, div.illleave1,
 div.illleave2, div.illleave3, div.illlist1, div.illlist2, div.illlist3,
-div.illshop1, div.illtrade1, div.illpro1, div.illfight1, div.illfight2, 
-div.illfight3, div.illchoose,  
+div.illshop1, div.illtrade1, div.illpro1, div.illpro1, div.illfight1, 
+div.illfight2, div.illfight3, div.illchoose,  
 div.illbrobux, div.illhoebro {
 	-moz-border-radius: 8px;
 	-webkit-border-radius: 8px;
@@ -316,8 +316,8 @@ div.illhoebro {
 }
 div.illlist1, div.illlist2, div.illlist3,
 div.illshop1, div.illtrade1, div.illpro1, 
-div.illfight1, div.illfight2, div.illfight3, 
-div.illchoose  {
+div.illpro2, div.illfight1, div.illfight2, 
+div.illfight3, div.illchoose  {
 	border: 0;
 
 	border-bottom-left-radius: 0px;
@@ -343,6 +343,9 @@ div.illtrade1 {
 }
 div.illpro1 {
 	background-image:url('/art/illpro1.png');
+}
+div.illpro2 {
+	background-image:url('/art/illpro2.png');
 }
 div.illfight1 {
 	background-image:url('/art/illfight1.png');
