--- a/hoe-house/html/css/hoe.css
+++ b/hoe-house/html/css/hoe.css
@@ -468,9 +468,10 @@ div.chunk4{
 	border-left:1px solid #ccc;
 	border-right:1px solid #ccc;
 	margin: 0px;
-	width: 350px;
+	width: 60px;
 	padding: 0px 5px 5px 5px;
 	float: left;
+	position: absolute;
 }
 /* HUD container */
 div.chunk5{
@@ -483,7 +484,7 @@ div.chunk5{
 	border-left:1px solid #ccc;
 	border-right:1px solid #ccc;
 	margin: 0px;
-	width: 585px;
+	width: 830px;
 	padding: 5px;
 	float: right;
 }
@@ -1490,7 +1491,7 @@ div.hud{
 	-webkit-border-radius: 8px;
 	border-radius: 8px;
 	border: 2px solid #ccc;
-	width: 580px;
+	width: 825px;
 	margin: 0px;
 	float:left;
 }
