--- a/hoe-house/html/css/hoe.css
+++ b/hoe-house/html/css/hoe.css
@@ -469,9 +469,12 @@ div.chunk4{
 	border-right:1px solid #ccc;
 	margin: 0px;
 	width: 60px;
+	height: 380px;
+	height: 55px;
 	padding: 0px 5px 5px 5px;
 	float: left;
 	position: absolute;
+	overflow:hidden;
 }
 /* HUD container */
 div.chunk5{
